--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -1,6 +1,16 @@
 {
+  "type": "module",
+  "scripts": {
+    "lint": "npx eslint"
+  },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.17.0",
+    "@eslint/js": "^9.17.0",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0"
   }
 }
