--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -1,16 +1,19 @@
 {
   "type": "module",
   "scripts": {
-    "lint": "npx eslint"
+    "lint": "npx eslint",
+    "format-check": "npx prettier wander --check",
+    "format": "npx prettier wander --write"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.17.0",
     "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.3",
-    "globals": "^15.14.0"
+    "globals": "^15.14.0",
+    "prettier": "3.4.2"
   }
 }
