[gw] Add 'clsx' for multi-line class names

--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -6,6 +6,7 @@
     "format": "npx prettier wander --write"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wouter": "3.3.5"
