[gw] Set up React test suite with 'jest', 'jsdom', 'testing-library', and 'swc' (JSX transformer)

--- a/phx-react/apps/wander_web/assets/tsconfig.json
+++ b/phx-react/apps/wander_web/assets/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
-      "/*": ["./*"]
+      "/*": ["./*"],
+      "test-support": ["./test/support"]
     }
   }
 }
