--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "lint": "npx eslint",
     "format-check": "npx prettier wander --check",
-    "format": "npx prettier wander --write"
+    "format": "npx prettier wander --write",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "clsx": "^2.1.1",
@@ -13,9 +14,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@jest/globals": "^29.7.0",
+    "@swc/core": "^1.10.4",
+    "@swc/jest": "^0.2.37",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "eslint": "^9.17.0",
+    "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-react": "^7.37.3",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "3.4.2"
   }
 }
