--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "maplibre-gl": "^5.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wouter": "3.3.5"
