--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "maplibre-gl": "^5.0.1",
+    "opening_hours": "3.8.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "wouter": "3.3.5"
