--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "lint": "npx eslint",
-    "format-check": "npx prettier wander --check",
+    "format-check": "npx prettier wander test --check",
     "format": "npx prettier wander test --write",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
