--- a/phx-react/apps/wander_web/.gitignore
+++ b/phx-react/apps/wander_web/.gitignore
@@ -36,6 +36,9 @@ wander_web-*.tar
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
+# Where map tiles (vector or raster) can be put
+/priv/static/map-tiles/*.pmtiles
+
 # In case you use Node.js/npm, you want to ignore these.
 npm-debug.log
 /assets/node_modules/
