--- a/phx-react/.gitignore
+++ b/phx-react/.gitignore
@@ -22,10 +22,14 @@ erl_crash.dump
 # Temporary files, for example, from tests.
 /tmp/
 
-
 # Database files
 *.db
 *.db-*
 
 # ctags
 /tags
+
+# Scripts
+/scripts/osm_extracts/*
+/scripts/tilemaker/artifacts/*
+/scripts/tilemaker/extracts/*
