[gw] Add 'tanaris' common lib package

--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -13,6 +13,7 @@
     "pmtiles": "4.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tanaris": "0.0.1-alpha.5",
     "wouter": "3.3.5"
   },
   "devDependencies": {
