--- a/phx-react/apps/wander_web/assets/package.json
+++ b/phx-react/apps/wander_web/assets/package.json
@@ -21,6 +21,7 @@
     "@jest/globals": "^29.7.0",
     "@swc/core": "^1.10.4",
     "@swc/jest": "^0.2.37",
+    "@tailwindcss/forms": "0.5.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
     "eslint": "^9.17.0",
@@ -29,6 +30,7 @@
     "globals": "^15.14.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prettier": "3.4.2"
+    "prettier": "3.4.2",
+    "tailwindcss": "3.1.6"
   }
 }
